--- a/js13.html
+++ b/js13.html
@@ -27,7 +27,7 @@
         "8910"
         document.getElementById("a1").innerHTML="1234567" // 마지막 구문이 출력
 
-        let b = "abc";              // string
+        let b = "abcde";              // string
         let c = new String("abc");  // object
         document.getElementById("b1").innerHTML=typeof b + "<br>" + typeof c;
 
