--- a/js14-2.html
+++ b/js14-2.html
@@ -9,7 +9,7 @@
 <body>
     <p id="a"></p>
     <script>
-        const f = ["바나나", "오렌지", "사과", "망고"];
+        const f = ["키위", "오렌지", "사과", "망고"];
 
         let txt = "<ul>";
         f.forEach(myfunction);
