--- a/js14.html
+++ b/js14.html
@@ -9,7 +9,7 @@
 <body>
     <p id="a"></p>
     <script>
-        const arr1 = ["바나나", "딸기", "배", "사과"];
+        const arr1 = ["바나나", "딸기", "배", "오렌지"];
         let fL = arr1.length;
 
         let txt = "<ul>";
